--- a/GL_Two.vcxproj
+++ b/GL_Two.vcxproj
@@ -475,4 +475,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="GL_Two.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
