--- a/GL_Two.rc
+++ b/GL_Two.rc
@@ -112,6 +112,7 @@ BEGIN
         MENUITEM "Status &Bar",                 ID_VIEW_STATUS_BAR
         MENUITEM "&Settings",                   ID_VIEW_SETTINGS
         MENUITEM "&Wireframe",                  ID_VIEW_WIREFRAME
+        MENUITEM "&Monochrome",                 ID_VIEW_BLACKANDWHITE
     END
     POPUP "&Primitives"
     BEGIN
