Changed thread operation
git-tfs-id: [https://calicobay.visualstudio.com/DefaultCollection]$/GL_Two;C68

--- a/GL_Two.vcxproj
+++ b/GL_Two.vcxproj
@@ -23,7 +23,7 @@
     <SccLocalPath>SAK</SccLocalPath>
     <Keyword>MFCProj</Keyword>
     <ProjectGuid>{D7D7F247-D771-3D6F-4D54-C9FD22580F15}</ProjectGuid>
-    <ProjectName>GL_Two (Visual Studio 2012)</ProjectName>
+    <ProjectName>GL_Two</ProjectName>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
   </PropertyGroup>
