--- a/GL_Two.rc
+++ b/GL_Two.rc
@@ -269,7 +269,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | WS_POPUP | WS_CAPTION | WS_SYSMEN
 CAPTION "Polygon Construction"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    EDITTEXT        IDC_POINTS,77,8,40,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_POINTS,77,7,40,16,ES_AUTOHSCROLL
     EDITTEXT        IDC_DOUBLEX,27,38,40,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_DOUBLEY,27,54,40,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_DOUBLEZ,27,70,40,14,ES_AUTOHSCROLL
@@ -283,10 +283,11 @@ BEGIN
     LTEXT           "Z",IDC_Z,13,70,9,8
     LTEXT           "Vertex",IDC_STATIC,81,25,21,8
     LTEXT           "Number",IDC_STATIC,79,35,26,8
-    EDITTEXT        IDC_EDIT5,82,44,20,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT5,82,44,20,14,ES_AUTOHSCROLL | ES_READONLY
     CONTROL         "Convex",IDC_CONVEX,"Button",BS_AUTOCHECKBOX,14,25,40,10
     PUSHBUTTON      "Color",IDC_COLOR,71,63,50,14
     CONTROL         "",IDC_VERTICES,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,92,365,222
+    EDITTEXT        IDC_POLY_DESC,126,7,189,16,ES_AUTOHSCROLL
 END
 
 IDD_COMP_DLG DIALOG 0, 0, 246, 273
